--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -30,3 +30,51 @@ a {
     text-decoration: none;
     color: white;
 }
+
+header,
+footer {
+    height: 60px;
+    width: 100%;
+    line-height: 60px;
+    background-color: black;
+}
+
+header {
+    position: fixed;
+    border-bottom: 10px solid darkgreen
+}
+
+footer {
+    position: absolute;
+    margin-top: 0px;
+    bottom: 0px;
+    border-bottom: 10px solid darkgreen;
+    color: white
+}
+
+figure {
+    margin-bottom: 40px;
+}
+
+img {
+    display: block;
+    margin: 20px auto;
+}
+
+section {
+    margin-bottom: 0px;
+    padding: 20px 10px 40px 10px;
+    border-top: 3px solid blue;
+    background-color: grey;
+}
+
+form {
+    margin: 0px auto;
+    width: 500px;
+    padding: 10px;
+    border: 5px solid orange;
+    border-radius: 20px;
+}
+
+
+
