--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -59,6 +59,7 @@ figure {
 img {
     display: block;
     margin: 20px auto;
+    border: 30px solid orange;
 }
 
 section {
@@ -76,5 +77,26 @@ form {
     border-radius: 20px;
 }
 
+label {
+    display: inline-block;
+    width: 100px;
+}
 
+input,
+textarea {
+    box-sizing: border-box;
+    width: 300px;
+    border: 1px solid black;
+}
 
+textarea {
+    vertical-align: top;
+    height: 60px;
+}
+
+button {
+    height: 40px;
+    width: 120px;
+    background-color: black;
+    color: white;
+}
